# rqt_omnimagnet

./: CMakeLists.txt  README.md  package.xml  plugin.xml
include/rqt_omnimagnet/: OmniMagnet.h  omnimag_ros.h  rqt_omnimagnet.h
src/: OmniMagnet.cpp  omnimag.cpp  omnimag_gui.ui  omnimag_ros.cpp  rqt_omnimagnet.cpp  rqt_omnimagnet.cpp.autosave
