<?xml version="1.0"?>
<package format="2">
  <name>rqt_omnimagnet</name>
  <version>0.0.0</version>
  <description>The rqt_omnimagnet package</description>

  <maintainer email="todo@todo.todo">remireaa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>medlab_motor_control_board</depend>
    

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
